--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <!-- <script type="text/javascript">
         document.write('Cyber Firebug')
     </script> -->
+
+    <link rel="stylesheet" href="style.css">
 </head>
     <body>
         <h1>Inline</h1>
